# icecream-parlor

./: CMakeLists.txt  main.cpp
cmake/Modules/: FindIcecream.cmake  FindLzo.cmake
